--- a/index.html
+++ b/index.html
@@ -20,12 +20,63 @@
         </nav>
         <nav class="local-nav">
             <div class="local-nav-links">
-                <a href="#" class="product-name">HunsHome</a>
+                <a href="#" class="product-name">HunsHome View</a>
                 <a href="#">Shop</a>
                 <a href="#">Buset</a>
                 <a href="#">Contect</a>
             </div>
         </nav>
-    </div>    
+        <section class="scroll-section" id="scroll-section-0">
+            <h1>HonsHome View</h1>
+            <div class="sticky-elem main-masage">
+                <p>은은하게 드러나는<br>고급스러움</p>
+            </div>
+            <div class="sticky-elem main-masage">
+                <p>부드러움과 완벽하게 어울러진 <br>페인트</p>
+            </div>
+            <div class="sticky-elem main-masage">
+                <p>온화한 빛과 어울러진 <br>오드막에 석양</p>
+            </div>
+            <div class="sticky-elem main-masage">
+                <p>조용한 카리스마가 엿보이는<br>침엽 숲</p>
+            </div>
+        </section>
+        <section class="scroll-section" id="scroll-section-1">
+            <p>
+                <strong>오드막에 석양</strong>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint doloribus assumenda aliquam esse repellendus neque reiciendis adipisci sunt porro, corrupti doloremque et saepe, minus fuga, eum suscipit ex eaque non quos? Voluptatem praesentium, incidunt porro expedita at quia quaerat ratione animi, dolorem eveniet iste vitae quisquam eos illo eius tempora laudantium voluptatum deleniti consectetur error quos, modi voluptatibus aperiam? Sed velit placeat ipsam nulla commodi quo ex in voluptatibus quae asperiores. Doloribus quas quod tenetur reprehenderit minima non perferendis expedita aperiam voluptate iste inventore tempora harum ab magnam ducimus veniam, soluta corporis voluptatibus consectetur, assumenda temporibus animi sit qui libero? At accusamus laborum minus illum facere doloremque repudiandae error dolorum exercitationem labore corrupti soluta, mollitia vitae dolor nisi neque voluptate? Debitis et, fugit quo exercitationem laborum repellendus, ab totam inventore omnis optio voluptate quas quam architecto impedit ea. Sapiente omnis, vero enim tempora temporibus incidunt, minima dolor explicabo mollitia ipsam eaque sequi perferendis nesciunt architecto soluta provident debitis doloremque nostrum assumenda harum blanditiis! Magnam placeat libero minima consequatur nobis rem blanditiis officia voluptate iste architecto eius ipsa, quis, incidunt tempore rerum pariatur expedita nam molestias corporis, asperiores culpa non? Itaque, sit ex aspernatur fuga facere neque voluptas iusto veniam totam.
+            </p>
+        </section>
+        <section class="scroll-section" id="scroll-section-2">
+            <div class="sticky-elem main-masage">
+                <p>
+                    <small>화려함에 극치</small>
+                            평범함에 배려를 잃다
+                </p>
+            </div>
+            <div class="sticky-elem main-masage">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti voluptatibus consequatur debitis expedita itaque cum doloremque. Iure, dolores? Quasi, commodi.
+                </p>
+                <div class="pin"></div>
+            </div>
+            <div class="sticky-elem main-masage">
+                <p>
+                    피카소에 그림을 연상케하는 <br>감각적인 디자인
+                </p>
+                <div class="pin"></div>
+            </div>
+        </section>
+        <section class="scroll-section" id="scroll-section-3">
+            <p class="mid-message">
+                <strong>Noble 루비 컬러에</strong>
+                더욱 풍부한 Gold Background<br>
+                조용한 빛으로 아늑함을 더하다    
+            </p>
+        </section>
+        <footer class="footer">
+            <h3>2021 HonsHome</h3> 
+        </footer>
+    </div>  
  </body>
  </html>
