--- a/index.html
+++ b/index.html
@@ -27,40 +27,40 @@
             </div>
         </nav>
         <section class="scroll-section" id="scroll-section-0">
-            <h1>HonsHome View</h1>
-            <div class="sticky-elem main-masage">
+            <h1>HonsHome<br>View</h1>
+            <div class="sticky-elem main-message">
                 <p>은은하게 드러나는<br>고급스러움</p>
             </div>
-            <div class="sticky-elem main-masage">
-                <p>부드러움과 완벽하게 어울러진 <br>페인트</p>
+            <div class="sticky-elem main-message">
+                <p>부드러움과 완벽하게<br>어울러진 페인트</p>
             </div>
-            <div class="sticky-elem main-masage">
+            <div class="sticky-elem main-message">
                 <p>온화한 빛과 어울러진 <br>오드막에 석양</p>
             </div>
-            <div class="sticky-elem main-masage">
-                <p>조용한 카리스마가 엿보이는<br>침엽 숲</p>
+            <div class="sticky-elem main-message">
+                <p>조용한 카리스마가 <br>엿보이는침엽 숲</p>
             </div>
         </section>
         <section class="scroll-section" id="scroll-section-1">
-            <p>
-                <strong>오드막에 석양</strong>
+            <p class="description">
+                <strong>천년 밀림의 석양</strong>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint doloribus assumenda aliquam esse repellendus neque reiciendis adipisci sunt porro, corrupti doloremque et saepe, minus fuga, eum suscipit ex eaque non quos? Voluptatem praesentium, incidunt porro expedita at quia quaerat ratione animi, dolorem eveniet iste vitae quisquam eos illo eius tempora laudantium voluptatum deleniti consectetur error quos, modi voluptatibus aperiam? Sed velit placeat ipsam nulla commodi quo ex in voluptatibus quae asperiores. Doloribus quas quod tenetur reprehenderit minima non perferendis expedita aperiam voluptate iste inventore tempora harum ab magnam ducimus veniam, soluta corporis voluptatibus consectetur, assumenda temporibus animi sit qui libero? At accusamus laborum minus illum facere doloremque repudiandae error dolorum exercitationem labore corrupti soluta, mollitia vitae dolor nisi neque voluptate? Debitis et, fugit quo exercitationem laborum repellendus, ab totam inventore omnis optio voluptate quas quam architecto impedit ea. Sapiente omnis, vero enim tempora temporibus incidunt, minima dolor explicabo mollitia ipsam eaque sequi perferendis nesciunt architecto soluta provident debitis doloremque nostrum assumenda harum blanditiis! Magnam placeat libero minima consequatur nobis rem blanditiis officia voluptate iste architecto eius ipsa, quis, incidunt tempore rerum pariatur expedita nam molestias corporis, asperiores culpa non? Itaque, sit ex aspernatur fuga facere neque voluptas iusto veniam totam.
             </p>
         </section>
         <section class="scroll-section" id="scroll-section-2">
-            <div class="sticky-elem main-masage">
+            <div class="sticky-elem main-message">
                 <p>
-                    <small>화려함에 극치</small>
-                            평범함에 배려를 잃다
+                    <small>평범함에 지친</small>
+                        화려함의 반란
                 </p>
             </div>
-            <div class="sticky-elem main-masage">
+            <div class="sticky-elem desc-message">
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti voluptatibus consequatur debitis expedita itaque cum doloremque. Iure, dolores? Quasi, commodi.
+                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam deserunt quisquam blanditiis rerum. Suscipit inventore similique nostrum repudiandae cumque sunt dignissimos ut saepe omnis maiores. Dignissimos tenetur cupiditate dolorem impedit fugiat est eveniet aut reprehenderit, nam quisquam facilis provident, vel ad culpa numquam deserunt necessitatibus explicabo nulla similique aspernatur corporis.
                 </p>
                 <div class="pin"></div>
             </div>
-            <div class="sticky-elem main-masage">
+            <div class="sticky-elem desc-message">
                 <p>
                     피카소에 그림을 연상케하는 <br>감각적인 디자인
                 </p>
@@ -69,14 +69,19 @@
         </section>
         <section class="scroll-section" id="scroll-section-3">
             <p class="mid-message">
-                <strong>Noble 루비 컬러에</strong>
+                <strong>Noble 루비 컬러에</strong><br>
                 더욱 풍부한 Gold Background<br>
-                조용한 빛으로 아늑함을 더하다    
+                조용한 빛으로 아늑함을 더하다.    
+            </p>
+            <p class="canvas-caption">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab impedit minus reprehenderit molestiae? Nesciunt deleniti facere dolorum animi inventore unde eum, ipsam alias illum, iste voluptate aspernatur? Debitis, suscipit eos. Odit asperiores dolore eum unde aliquid perspiciatis dignissimos sit molestiae perferendis qui et ipsa necessitatibus iure, repellat excepturi iusto tempora exercitationem ullam laboriosam magni iste hic consectetur eos tenetur? Fuga reprehenderit aut perferendis ut pariatur explicabo sapiente voluptatibus repellendus! Veritatis commodi ipsam, velit doloremque magnam iste enim, ullam laudantium consequatur omnis id aliquid possimus. Quibusdam a repudiandae ipsum dicta exercitationem nostrum culpa eaque, veniam corrupti corporis hic et porro odio.
             </p>
         </section>
         <footer class="footer">
             <h3>2021 HonsHome</h3> 
         </footer>
-    </div>  
+    </div> 
+    
+    <script src="main.js"></script>
  </body>
  </html>
